--- a/style.css
+++ b/style.css
@@ -55,3 +55,19 @@ a:hover {
 .card-text {
   text-align: center;
 }
+
+@media (max-width: 576px) {
+  h1 {
+    font-size: 48px;
+  }
+
+  h2 {
+    font-size: 32px;
+  }
+
+  h3 {
+    font-size: 20px;
+    opacity: 0.7;
+    padding: 10px;
+  }
+}
